--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85796e">  <td>20/12/09 15:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AuthTest.InquiryTest()[pri:0, instance:com.project.demo.test.AuthTest@39aeed2f]">InquiryTest</td> 
-  <td>main@1540011289</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>20/12/09 15:05:37</td>   <td>7408</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.end()[pri:0, instance:com.project.demo.test.AuthTest@39aeed2f]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1540011289</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>20/12/09 15:05:21</td>   <td>-8730</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.open()[pri:0, instance:com.project.demo.test.AuthTest@39aeed2f]">&gt;&gt;open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1540011289</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>20/12/09 15:15:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AuthTest.InquiryTest()[pri:0, instance:com.project.demo.test.AuthTest@20e2cbe0]">InquiryTest</td> 
+  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>20/12/09 15:15:10</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.end()[pri:0, instance:com.project.demo.test.AuthTest@20e2cbe0]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>20/12/09 15:15:03</td>   <td>-7455</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.open()[pri:0, instance:com.project.demo.test.AuthTest@20e2cbe0]">&gt;&gt;open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121647253</td>   <td></td> </tr>
 </table>
